force-app/main/default/objects/Incident_Report__c/fields/sattelitecustomer__c.field-meta.xml
<CustomField>
    <fullName>sattelitecustomer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>כרטיס עסקה</label>
    <referenceTo>Transaction_Card__c</referenceTo>
    <relationshipLabel>Event Records (כרטיס עסקה)</relationshipLabel>
    <relationshipName>Event_Records1</relationshipName>
    <type>Lookup</type>
</CustomField>