force-app/main/default/objects/Incident_Report__c/fields/Scars__c.field-meta.xml
<CustomField>
    <fullName>Scars__c</fullName>
    <label>Scars</label>
    <length>255</length>
    <type>Text</type>
</CustomField>