force-app/main/default/objects/Incident_Report__c/fields/SendForm__c.field-meta.xml
<CustomField>
    <fullName>SendForm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Form</label>
    <type>Checkbox</type>
</CustomField>