force-app/main/default/objects/Incident_Report__c/fields/Shirt__c.field-meta.xml
<CustomField>
    <fullName>Shirt__c</fullName>
    <label>Shirt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>