force-app/main/default/objects/Incident_Report__c/fields/Shnat_Sherut__c.field-meta.xml
<CustomField>
    <fullName>Shnat_Sherut__c</fullName>
    <label>Shnat Sherut</label>
    <length>255</length>
    <type>Text</type>
</CustomField>