force-app/main/default/objects/Incident_Report__c/fields/Shoes__c.field-meta.xml
<CustomField>
    <fullName>Shoes__c</fullName>
    <label>Shoes / Sandels</label>
    <length>255</length>
    <type>Text</type>
</CustomField>