force-app/main/default/objects/Incident_Report__c/fields/Sipur_Derech__c.field-meta.xml
<CustomField>
    <fullName>Sipur_Derech__c</fullName>
    <label>Road Story</label>
    <type>Url</type>
</CustomField>