force-app/main/default/objects/Incident_Report__c/fields/Sleeping_Bag__c.field-meta.xml
<CustomField>
    <fullName>Sleeping_Bag__c</fullName>
    <label>Sleeping Bag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>