force-app/main/default/objects/Incident_Report__c/fields/Split_Points__c.field-meta.xml
<CustomField>
    <fullName>Split_Points__c</fullName>
    <label>Split Point</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>