force-app/main/default/objects/Incident_Report__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <label>Event Summary</label>
    <length>40000</length>
    <type>LongTextArea</type>
</CustomField>