force-app/main/default/objects/Incident_Report__c/fields/Tattoos__c.field-meta.xml
<CustomField>
    <fullName>Tattoos__c</fullName>
    <label>Tattoos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>