force-app/main/default/objects/Incident_Report__c/fields/Team_Satellite_Device__c.field-meta.xml
<CustomField>
    <fullName>Team_Satellite_Device__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Satellite Devices With Team</label>
    <referenceTo>Card_Device__c</referenceTo>
    <relationshipName>Incident_Report</relationshipName>
    <type>Lookup</type>
</CustomField>