force-app/main/default/objects/Incident_Report__c/fields/Telephone__c.field-meta.xml
<CustomField>
    <fullName>Telephone__c</fullName>
    <label>Phone Number Of Person Reporting</label>
    <type>Phone</type>
</CustomField>