force-app/main/default/objects/Incident_Report__c/fields/Tent__c.field-meta.xml
<CustomField>
    <fullName>Tent__c</fullName>
    <label>Tent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>