force-app/main/default/objects/Incident_Report__c/fields/Total_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Total_Expenses__c</fullName>
    <label>Total Expanses</label>
    <summarizedField>Product_in_Event__c.FinalPrice__c</summarizedField>
    <summaryForeignKey>Product_in_Event__c.Event__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>