force-app/main/default/objects/Incident_Report__c/fields/Total_Paid__c.field-meta.xml
<CustomField>
    <fullName>Total_Paid__c</fullName>
    <label>Paid To Suppliers</label>
    <summarizedField>Product_in_Event__c.Paid_Amount__c</summarizedField>
    <summaryForeignKey>Product_in_Event__c.Event__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>