force-app/main/default/objects/Incident_Report__c/fields/Travel_Partners__c.field-meta.xml
<CustomField>
    <fullName>Travel_Partners__c</fullName>
    <label>Travel Partners</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>