force-app/main/default/objects/Incident_Report__c/fields/Travel_Time__c.field-meta.xml
<CustomField>
    <fullName>Travel_Time__c</fullName>
    <label>Duration Of The Trip</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>