force-app/main/default/objects/Incident_Report__c/fields/Traveler_Email__c.field-meta.xml
<CustomField>
    <fullName>Traveler_Email__c</fullName>
    <label>Traveler Email</label>
    <type>Email</type>
</CustomField>