force-app/main/default/objects/Incident_Report__c/fields/Travelers_Telephone__c.field-meta.xml
<CustomField>
    <fullName>Travelers_Telephone__c</fullName>
    <label>Travelers Phone Numbers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>