force-app/main/default/objects/Incident_Report__c/fields/Travelers_with_Rescued__c.field-meta.xml
<CustomField>
    <fullName>Travelers_with_Rescued__c</fullName>
    <label>Travelers With Rescued Client</label>
    <length>255</length>
    <type>Text</type>
</CustomField>