force-app/main/default/objects/Incident_Report__c/fields/Twitter_Account__c.field-meta.xml
<CustomField>
    <fullName>Twitter_Account__c</fullName>
    <label>Twitter Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>