force-app/main/default/objects/Incident_Report__c/fields/Type_Desk_Rescue__c.field-meta.xml
<CustomField>
    <fullName>Type_Desk_Rescue__c</fullName>
    <label>Request Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Search &amp; Locate</fullName>
            </value>
            <value>
                <fullName>Rescue</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>SOS</fullName>
                <isActive>false</isActive>
                <label>SOS</label>
            </value>
            <value>
                <fullName>איתור - פרטי</fullName>
                <isActive>false</isActive>
                <label>איתור - פרטי</label>
            </value>
            <value>
                <fullName>חילוץ - פרטי</fullName>
                <isActive>false</isActive>
                <label>חילוץ - פרטי</label>
            </value>
            <value>
                <fullName>ייעוץ שהתפתח לחירום</fullName>
                <isActive>false</isActive>
                <label>ייעוץ שהתפתח לחירום</label>
            </value>
            <value>
                <fullName>עד הקצה</fullName>
                <isActive>false</isActive>
                <label>עד הקצה</label>
            </value>
            <value>
                <fullName>פינוי מוסק נפאל</fullName>
                <isActive>false</isActive>
                <label>פינוי מוסק נפאל</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>