force-app/main/default/objects/Incident_Report__c/fields/Update_on_Condition__c.field-meta.xml
<CustomField>
    <fullName>Update_on_Condition__c</fullName>
    <label>Last Update On Client Conditions</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>