force-app/main/default/objects/Incident_Report__c/fields/Wallet__c.field-meta.xml
<CustomField>
    <fullName>Wallet__c</fullName>
    <label>Wallet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>