force-app/main/default/objects/Incident_Report__c/fields/Water__c.field-meta.xml
<CustomField>
    <fullName>Water__c</fullName>
    <label>Water</label>
    <length>255</length>
    <type>Text</type>
</CustomField>