force-app/main/default/objects/Incident_Report__c/fields/Weather__c.field-meta.xml
<CustomField>
    <fullName>Weather__c</fullName>
    <label>Weather</label>
    <length>255</length>
    <type>Text</type>
</CustomField>