force-app/main/default/objects/Incident_Report__c/fields/Who_Opened_Event__c.field-meta.xml
<CustomField>
    <fullName>Who_Opened_Event__c</fullName>
    <label>Who Opened Event</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Gali</fullName>
            </value>
            <value>
                <fullName>Gil</fullName>
            </value>
            <value>
                <fullName>Ido</fullName>
            </value>
            <value>
                <fullName>Itai</fullName>
            </value>
            <value>
                <fullName>Nadav</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Roni</fullName>
            </value>
            <value>
                <fullName>Yarden</fullName>
            </value>
            <value>
                <fullName>Yhali</fullName>
            </value>
            <value>
                <fullName>Yoav</fullName>
            </value>
            <value>
                <fullName>Ziv</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>