force-app/main/default/objects/Incident_Report__c/fields/Wifi_Reception__c.field-meta.xml
<CustomField>
    <fullName>Wifi_Reception__c</fullName>
    <label>Wifi Reception</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>