force-app/main/default/objects/Incident_Report__c/fields/Work_Place__c.field-meta.xml
<CustomField>
    <fullName>Work_Place__c</fullName>
    <label>Work Place</label>
    <length>255</length>
    <type>Text</type>
</CustomField>