force-app/main/default/objects/Incident_Report__c/recordTypes/Desk_Rescue_Info.recordType-meta.xml
<RecordType>
    <fullName>Desk_Rescue_Info</fullName>
    <active>true</active>
    <label>Operations</label>
</RecordType>