force-app/main/default/objects/Incident_Report__c/recordTypes/Mental_Rescue_Info.recordType-meta.xml
<RecordType>
    <fullName>Mental_Rescue_Info</fullName>
    <active>true</active>
    <label>Mental Health</label>
</RecordType>