force-app/main/default/objects/Incident_Report__c/validationRules/Close_Event_Checkbox.validationRule-meta.xml
<ValidationRule>
    <fullName>Close_Event_Checkbox</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
Close_Event__c = False, 
Text(Event_Status__c )= &quot;Closed&quot; 
)</errorConditionFormula>
    <errorDisplayField>Close_Event__c</errorDisplayField>
    <errorMessage>Should we close the event?</errorMessage>
</ValidationRule>