force-app/main/default/objects/Incident_Report__c/validationRules/Send_Mail_without_Email.validationRule-meta.xml
<ValidationRule>
    <fullName>Send_Mail_without_Email</fullName>
    <active>true</active>
    <errorConditionFormula>SendForm__c = true &amp;&amp;   ISBLANK(Acc_Addressing_Email__c)</errorConditionFormula>
    <errorMessage>Email is required.</errorMessage>
</ValidationRule>