force-app/main/default/objects/Incident_Report__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Event_Status__c</columns>
    <columns>Type_Desk_Rescue__c</columns>
    <columns>Rescued_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>