force-app/main/default/objects/Incident_Report__c/listViews/View.listView-meta.xml
<ListView>
    <fullName>View</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Type_Desk_Rescue__c</columns>
    <columns>Rescued_Name__c</columns>
    <columns>Countries__c</columns>
    <columns>Insurance_Company_picklist__c</columns>
    <columns>Event_Open_Date__c</columns>
    <columns>Event_Time_Days__c</columns>
    <columns>Total_Income__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Event_Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <label>אירועים פתוחים</label>
</ListView>