force-app/main/default/objects/Incident_Report__c/listViews/View1.listView-meta.xml
<ListView>
    <fullName>View1</fullName>
    <columns>NAME</columns>
    <columns>Type_Desk_Rescue__c</columns>
    <columns>Rescued_Name__c</columns>
    <columns>Countries__c</columns>
    <columns>Insurance_Company_picklist__c</columns>
    <columns>Event_close_Time__c</columns>
    <columns>Event_Source__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Countries__c</field>
        <operation>equals</operation>
        <value>ישראל</value>
    </filters>
    <label>אירועים סגורים</label>
</ListView>